added quizzes, updated homepage

--- a/downloads.html
+++ b/downloads.html
@@ -23,7 +23,7 @@
             padding: 0;
             margin-bottom: 50px;
             color: #FF0179;
-          }
+        }
         .download {
             margin-bottom: 10px;
         }  
@@ -66,17 +66,22 @@
     <div class="container">
         <div class="row">
           <h1 class="title">Our Downloads</h1>
-          <div class="col-xs-12 col-sm-6 col-md-4 download">
-            <a href="media/RitualsForRemovingCreativeBlocks.pdf" target="_blank">
-            <img src="img/download-rituals.jpg" class="img-responsive" alt="Rituals For Removing Creative Blocks"></a>
-            <span>Rituals for Removing Creative Blocks</span>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 download">
+          <div class="col-xs-12 col-sm-6 col-md-3 download">
             <a href="media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf">
             <img src="img/download-makeyourself.jpg" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook"></a>
             <span>How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook</span>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 download">
+          <div class="col-xs-12 col-sm-6 col-md-3 download">
+            <a href="media/scantron.pdf">
+            <img src="img/download-scantron.jpg" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Scantron"></a>
+            <span>How to Make Yourself Into A Commissioning Body in 5 Easy Steps Scantron</span>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 download">
+            <a href="media/RitualsForRemovingCreativeBlocks.pdf" target="_blank">
+            <img src="img/download-rituals.jpg" class="img-responsive" alt="Rituals For Removing Creative Blocks"></a>
+            <span>Rituals for Removing Creative Blocks</span>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 download">
             <a href="media/ContractForAudienceOfOne.pdf">
             <img src="img/download-contract.jpg" class="img-responsive" alt="Contract for Audience of One"></a>
             <span>Contract for Audience of One</span>
