--- a/index.html
+++ b/index.html
@@ -102,10 +102,26 @@
 
   <div id="card14" class="card draggable"></div>
   <div id="card13" class="card draggable"></div>
-  <div id="card12" class="card draggable"></div>
-  <div id="card11" class="card draggable"></div>
-  <div id="card10" class="card draggable"></div>
-  <div id="card9" class="card draggable"></div>
+
+  <div id="card12" class="card draggable center">
+    Quizzes<br/><br/>
+    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
+  </div>
+
+  <div id="card11" class="card draggable center">
+    Commissions<br/><br/>
+    <a href="commissions.html"><img class="img-responsive" src="img/index-commissions.jpg"></a>
+  </div>
+
+  <div id="card10" class="card draggable center">
+    Downloads<br/><br/>
+    <a href="downloads.html"><img class="img-responsive img-height" src="img/index-downloads4.jpg"></a>
+  </div>
+
+  <div id="card9" class="card draggable center">
+    Generators<br/><br/>
+    <a href="generators.html"><img class="img-responsive" src="img/index-generators2.jpg"></a>
+  </div>
 
   <div id="card8" class="card draggable center commissioning-body">
     <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/><a href="http://www.eventbrite.de/e/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps-registration-20456886097" target="_blank">REGISTER NOW!</a></small>
