--- a/moneyquiz.html
+++ b/moneyquiz.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content=''>
-    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist as entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist as curator, artist as commissioner, on-demand economy, collaborative consumption, collaborative economy, gig-economy'>
+    <meta name='description' content='Would Money Be All I Really Need to Succeed? A Quiz'>
+    <meta name='keywords' content='money, quiz'>
     
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
 
@@ -196,8 +196,8 @@
             </div>
 
             <div id="slide-19" class="ci-slide">
-                <h2>Hey, get it together. Your legacy is not what you need to be focusing on right now.</h2>
-                <p>You need to listen very carefully. We're going to do an ego cleanse. Go to page 92 in the workbook. After you've cried a little bit, go to page 31, figure out who it is you're making art for/about, and make some art for god's sake.</p>
+                <h2>Get it together, this is not about you.</h2>
+                <p>You need to listen very carefully. We're going to do an ego cleanse. Go to page 92 in the workbook. After you've cried a little bit, go to page 31, figure out who it is you're making art for/with/about, and make some art for god's sake.</p>
                 <button class="ci-nav prev" path="slide-14"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
@@ -227,7 +227,7 @@
 
             <div id="slide-23" class="ci-slide">
                 <h2>Okay, but how certain are you that this person will always be there?</h2>
-                <button class="ci-nav" path="slide-24">Very certain. We're life partners, twin souls. I'm their favorite person.</button>
+                <button class="ci-nav" path="slide-24">Very certain. We're life partners. I'm their favorite person.</button>
                 <button class="ci-nav" path="slide-31">Not sure, but not worried. My mom would never abandon me.</button>
                 <button class="ci-nav" path="slide-36">Not sure, a little worried. The welfare state is on its last leg.</button>
                 <button class="ci-nav prev" path="slide-5"></button>
@@ -235,10 +235,10 @@
 
             <div id="slide-24" class="ci-slide">
                 <h2>How suppportive is your partner of your art practice?</h2>
-                <button class="ci-nav" path="slide-25">Very! We make work together, so much so that sometimes I forget who I am. It's almost as if we have become one person, one body.</button>
-                <button class="ci-nav" path="slide-28">We don't really talk about work. My love life and my art life have nothing in common.</button>
-                <button class="ci-nav" path="slide-29">My partner gets super jealous when I pay more attention to my work than to her. And don't even get me started on what she thinks about my "collaborating" with others.</button>
-                <button class="ci-nav" path="slide-30">She's not very into my work. I don't think she "gets it".</button>
+                <button class="ci-nav" path="slide-25">Very! We make work together, so much so that sometimes I forget who I am.</button>
+                <button class="ci-nav" path="slide-28">Very supportive, but at a distance. We each do our own thing.</button>
+                <button class="ci-nav" path="slide-29">My partner gets super jealous when I pay more attention to my work than to her/him.</button>
+                <button class="ci-nav" path="slide-30">S/he's not very into what I do. I don't think s/he gets it.</button>
                 <button class="ci-nav prev" path="slide-23"></button>
             </div>
 
@@ -258,7 +258,7 @@
             </div>
 
             <div id="slide-27" class="ci-slide">
-                <h2>Money, art <em>and</em> love! Sounds like you're living the dream!</h2>
+                <h2>Money, art and love! Sounds like you're living the dream!</h2>
                 <p>Our work here is done. You may close your Internet browser and go home.</p>
                 <button class="ci-nav prev" path="slide-25"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
@@ -272,8 +272,8 @@
             </div>
 
             <div id="slide-29" class="ci-slide">
-                <h2>I'm sorry, your partner sucks.</h2>
-                <p>Go to page 5 in the workbook, make a new persona. Then, go to page 12. You are to commission a healing and/or seductive performance by your new self, to be acted out by <a rehf="https://www.fiverr.com/cleopatrabionda/be-crazy-in-love-with-you-in-a-prank-video?funnel=b7bd987c-9ae7-47d1-ad7f-10b9436adc1b" target="_blank">her</a>. Address it to your old self. Watch it everyday for 21 days, or until your partner breaks up with you.</p>
+                <h2>This is a serious problem.</h2>
+                <p>Go to page 5 in the workbook. You are to make a new you. Then, go to page 12. You are to commission a seductive performance by your new self, to be acted out by <a href="https://www.fiverr.com/cleopatrabionda/be-crazy-in-love-with-you-in-a-prank-video?funnel=b7bd987c-9ae7-47d1-ad7f-10b9436adc1b" target="_blank">her</a>. Address this performance to your old self. Watch it everyday for 21 days, or until you break up.</p>
                 <button class="ci-nav prev" path="slide-24"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
@@ -444,7 +444,7 @@
 
             <div id="slide-53" class="ci-slide">
             <h2>We're sorry, we can't do that for you.</h2>   
-                <p>Go to page 15 in the workbook.</p>
+                <p>But after you figure it out, go to page 16 in the workbook.</p>
                 <button class="ci-nav prev" path="slide-48"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
@@ -458,13 +458,13 @@
 
             <div id="slide-55" class="ci-slide">
                 <h2>You might be too late for this too.</h2>   
-                <p>(Or not, if Ray Kurzweil has anything to say about it.)<br/>Go to page 9 in the workbook.</p>
+                <p>...or not, if Ray Kurzweil has anything to say about it. Go to page 9 in the workbook.</p>
                 <button class="ci-nav prev" path="slide-51"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
 
             <div id="slide-56" class="ci-slide">
-            <h2>Good luck! You have a lot of work to do.</h2>   
+            <h2>You have a lot of work to do.</h2>   
                 <p>Good thing you're dripping in mature cash money. Go to page 88 in the workbook.</p>
                 <button class="ci-nav prev" path="slide-52"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
@@ -472,15 +472,15 @@
 
             <div id="slide-57" class="ci-slide">
             <h2>You're really stubborn.</h2>   
-                <p>Do you really think you're going to make it on your "merits"? Where do you live???</p>
-                <button class="ci-nav" path="slide-58">Great art is universal, timeless! It shouldn't matter how old I am... the work should stand on its own.</button>
+                <p>Do you really think you're going to make it on merit?</p>
+                <button class="ci-nav" path="slide-58">Great art is universal, timeless! It shouldn't matter how old I am. The work should stand on its own.</button>
                 <button class="ci-nav" path="slide-59">Look, it's not about that. I just want to make interesting things that I can share with interesting people. A <em>lot</em> of interesting people.</button>
                 <button class="ci-nav prev" path="slide-52"></button>
             </div>
 
             <div id="slide-58" class="ci-slide">
             <h2>We're sorry, we can't help you.</h2>   
-                <p>This is too exhausting. We have to stop now. Stop, not as in pause, but as in, <a href="http://anxioustomake.ga/mugruggenerator.html#anxious%20to%20make,breakup" target="_blank">never again.</a></p>
+                <p>This is too exhausting. We have to <a href="http://anxioustomake.ga/mugruggenerator.html#anxious%20to%20make,breakup" target="_blank">stop</a> now.</p>
                 <button class="ci-nav prev" path="slide-57"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
@@ -615,7 +615,7 @@
 
             <!--NEVER ENOUGH 1 (entrepreneurial dream)-->
             <div id="slide-8" class="ci-slide">
-            <h2>Great! Then you are probably already super amaxxxxing at branding, publicity, outsourcing, etc.</h2>   
+            <h2>Great! Then you are probably already an expert at branding, publicity, outsourcing, etc.</h2>   
                 <p>Our work here is done. You may close your Internet browser and go home.</p>
                 <button class="ci-nav prev" path="slide-4"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
@@ -700,10 +700,11 @@
 
             <!--NEVER ENOUGH 5 (revolution)-->
             <div id="slide-12" class="ci-slide">
-                <h2>Zapatista style of Accelerationist style?</h2>   
+                <h2>Zapatista style or Accelerationist style?</h2>   
                 <p></p>
                 <button class="ci-nav" path="slide-83">Zapatista</button>
                 <button class="ci-nav" path="slide-84">Accelerationist</button>
+                <button class="ci-nav" path="slide-85">Other</button>
                 <button class="ci-nav prev" path="slide-4"></button>
             </div>
 
@@ -715,6 +716,13 @@
             </div> 
 
             <div id="slide-84" class="ci-slide">
+                <h2>Write your manifesto on a...</h2>   
+                <p><a href="http://anxioustomake.ga/mugruggenerator.html#MANIFESTO%20GOES%20HERE,revolution" target="_blank">CLICK HERE</a></p>
+                <button class="ci-nav prev" path="slide-12"></button>
+                <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
+            </div> 
+
+            <div id="slide-85" class="ci-slide">
                 <h2>Write your manifesto on a...</h2>   
                 <p><a href="http://anxioustomake.ga/mugruggenerator.html#MANIFESTO%20GOES%20HERE,revolution" target="_blank">CLICK HERE</a></p>
                 <button class="ci-nav prev" path="slide-12"></button>
