--- a/twins.html
+++ b/twins.html
@@ -180,7 +180,7 @@
             <div class="col-xs-12 col-sm-8">
                 <h1 class="title">Watch ours!</h1>
                 <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/154158545?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>       
             </div>
 
