--- a/generators.html
+++ b/generators.html
@@ -30,7 +30,7 @@
         .database span{
             font-family: sans-serif;
             font-weight: bold;
-            font-size: 1.5em;
+            font-size: 1.4em;
             margin-top: -40%;
             left: 15%; 
             display: inline-block;
@@ -50,6 +50,9 @@
            .title {
             font-size: 2.5em;
            }
+           .database span{
+            font-size: 1.2em;
+            } 
         }
 
     </style>
@@ -91,14 +94,14 @@
             <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
           </div> 
           <div class="col-xs-6 col-sm-4 col-md-3 database">
+            <a href="importantthings.html">
+            <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
+          </div> 
+          <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="moneymakinggenerator.html">
             <img src="img/database.jpg" class="img-responsive" alt="Money Making Generator"><span>Money Making<br/>Generator</span></a>
           </div> 
           <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="importantthings.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>Value<br/>Generator</span></a>
-          </div>  
-          <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="interngenerator.html">
             <img src="img/database.jpg" class="img-responsive" alt="Intern Generator"><span>Intern<br/>Generator</span></a>
           </div> -->
