added links to project generator

--- a/moneyquiz.html
+++ b/moneyquiz.html
@@ -273,8 +273,23 @@
 
             <div id="slide-29" class="ci-slide">
                 <h2>This is a serious problem.</h2>
-                <p>Go to page 5 in the workbook. You are to make a new you. Then, go to page 12. You are to commission a seductive performance by your new self, to be acted out by <a href="https://www.fiverr.com/cleopatrabionda/be-crazy-in-love-with-you-in-a-prank-video?funnel=b7bd987c-9ae7-47d1-ad7f-10b9436adc1b" target="_blank">her</a>. Address this performance to your old self. Watch it everyday for 21 days, or until you break up.</p>
-                <button class="ci-nav prev" path="slide-24"></button>
+                <p>Do you want to...</p>
+                <button class="ci-nav" path="slide-86">repair your relationship?</button>
+                <button class="ci-nav" path="slide-87">break up?</button>
+                <button class="ci-nav prev" path="slide-24"></button>  
+            </div>  
+
+            <div id="slide-86" class="ci-slide">
+                <h2>Soon you will be healed.</h2>
+                <p>Contact <a href="https://www.fiverr.com/raventrand/asisst-you-in-healing-your-soul-partnership" target="_blank">this</a> person. Commission a healing session. Re-commission as many times as needed. When it is all over, commence making art.</p>
+                <button class="ci-nav prev" path="slide-29"></button>
+                <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
+            </div> 
+
+            <div id="slide-87" class="ci-slide">
+                <h2>Soon you will be free.</h2>
+                <p>Go to page 5 in the workbook. You are to make a new you. Then, go to page 12. You are to commission a seductive performance by your new self, to be acted out by <a href="https://www.fiverr.com/cleopatrabionda/be-crazy-in-love-with-you-in-a-prank-video?funnel=b7bd987c-9ae7-47d1-ad7f-10b9436adc1b" target="_blank">her</a>. Address this performance to your old self. Watch it everyday for 21 days, or until you break up. When it is all over, commence making art.</p>
+                <button class="ci-nav prev" path="slide-29"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
 
