--- a/importantthings.html
+++ b/importantthings.html
@@ -218,7 +218,7 @@
     <script type="text/javascript" src="js/adverbs.json"></script>
     <script type="text/javascript" src="js/gerunds.json"></script>
     
-    <script type="text/javascript" src="js/valuegenerator.js"></script>
+    <script type="text/javascript" src="js/moreimportantartgenerator.js"></script>
 
   </body>
 </html>
