--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <p><b>Liat Berdugo</b> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
 <!--          liat's new comment-->
         <p><b>Emily Martinez</b> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
+
+        <p><b>Contact: </b><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate">anxioustomake[at]gmail[dot]com</a></p>
       </article>
    </div>        
    <a href="#!" class="closePopUpOutSide"></a>    
@@ -54,21 +56,103 @@
  
   <div class="welcome">anxious to make is making...</div>
 
-  <div id="card1" class="card draggable center research">
-    R&D<br/><br/><small>5 easy steps algorithm<br/>bots<br/>surveys</small>
-  </div>
-
-  <div id="card2" class="card draggable center critical-texts">
+<!--   <div id="card2" class="card draggable center critical-texts">
     Texts<br/><br/>
     <small>critical art practice and the sharing economy<br/><br/>
     mala onda: a guide for surviving the next five years (or the next 5 minutes) of accelerated change in post-capitalism's black magic vortex<br/><br/>
     radical practices in the network economy<br/><br/>
     tactics, movements, and forms of resistance for temporary, precarious laborers, knowledge workers, and cultural producers working today</small>
-  </div>  
+  </div>   -->
 
-  <div id="card3" class="card draggable news">
+<!--   <div id="card2" class="card draggable center internet-empire">
+    <em>How to Make Yourself an Internet Empire</em><br/><br/>a case study
+  </div>
+
+  <div id="card3" class="card draggable center labor">
+    <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
+  </div> -->
+
+  <div id="card1" class="card draggable center commissioning-body">
+    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
+  </div>
+
+  <div id="card2" class="card draggable center making-you">
+    <em>Making You</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.</small>
+  </div>
+
+  <div id="card3" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Confidence Generator</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card4" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Externalize Distrust</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/153587609?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card5" class="card draggable center rituals">
+    <img class="new" src="img/new.gif"/>
+    <em>Rituals for Removing</em><br/>Creative Blocks<br/><br/>
+    <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
+  </div>
+
+  <div id="card6" class="card draggable center making-others">
+    <img class="new" src="img/new.gif"/>
+    <em>Making Others</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/153431203?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card7" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Liat + Emily<br/>as Three Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
+  </div>
+
+  <div id="card14" class="card draggable center">
+    Store<br/><br/><br/>
+    <a href="mugruggenerator.html"><img class="img-responsive" src="img/store.jpg"></a>
+  </div>
+
+  <div id="card13" class="card draggable center">
+    Surveys<br/><br/>
+    <a href="makingyou.html"><img class="img-responsive" src="img/quiz.jpg"></a>
+  </div>
+
+  <div id="card12" class="card draggable center">
+    Quizzes<br/><br/>
+    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
+  </div>
+
+  <div id="card11" class="card draggable center">
+    Downloads<br/><br/>
+    <a href="downloads.html"><img class="img-responsive img-height" src="img/index-downloads2.jpg"></a>
+  </div>
+
+  <div id="card10" class="card draggable center">
+    Commissions<br/><br/>
+    <a href="commissions.html"><img class="img-responsive" src="img/index-commissions.jpg"></a>
+  </div>
+
+  <div id="card9" class="card draggable center">
+    Generators<br/><br/>
+    <a href="generators.html"><img class="img-responsive" src="img/index-generators2.jpg"></a>
+  </div>
+
+  <div id="card8" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">The Institute for New Feeling / FELT BOOK (screening)</a>, EMMEDIA, Calgary, Canada
+      <br/><br/>
+      <strong>02.2016</strong> <em>Three Rituals for Removing Creative Blocks</em>, <a href="http://www.theconceptbank.org/PDF/066.pdf" target="_blank">TheConceptBank Pays Out (award)</a>, TheConceptBank.org, Unnoticed Art Festival
+      <br/><br/>
       <strong>02.2016</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps</em>, <a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale</a>, Berlin, Germany
       <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, "Past and Future Conditions", A1 Lab Arts, Knoxville, TN
@@ -79,53 +163,7 @@
     </small>    
   </div>
 
-  <div id="card4" class="card draggable center internet-empire">
-    <em>How to Make Yourself an Internet Empire</em><br/><br/>a case study
-  </div>
-
-  <div id="card5" class="card draggable center labor">
-    <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
-  </div>
-
-  <div id="card6" class="card draggable center making-others">
-    <img class="new" src="img/new.gif"/>
-    <em>Making Others</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/153431203?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card7" class="card draggable center making-you">
-    <em>Making You</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.<br/><br/>For best results, view in HD.</small>
-  </div>
-
-  <div id="card14" class="card draggable"></div>
-  <div id="card13" class="card draggable"></div>
-
-  <div id="card12" class="card draggable center">
-    Quizzes<br/><br/>
-    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
-  </div>
-
-  <div id="card11" class="card draggable center">
-    Commissions<br/><br/>
-    <a href="commissions.html"><img class="img-responsive" src="img/index-commissions.jpg"></a>
-  </div>
-
-  <div id="card10" class="card draggable center">
-    Downloads<br/><br/>
-    <a href="downloads.html"><img class="img-responsive img-height" src="img/index-downloads4.jpg"></a>
-  </div>
-
-  <div id="card9" class="card draggable center">
-    Generators<br/><br/>
-    <a href="generators.html"><img class="img-responsive" src="img/index-generators2.jpg"></a>
-  </div>
-
-  <div id="card8" class="card draggable center commissioning-body">
-    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/><a href="http://www.eventbrite.de/e/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps-registration-20456886097" target="_blank">REGISTER NOW!</a></small>
-  </div>
+  
 
   <div class="marquee">
       <marquee>
