--- a/makingyou.html
+++ b/makingyou.html
@@ -10,8 +10,8 @@
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
     <meta name='description' content='Making You. This video was to help you understand yourself and your needs better. Please fill out our survey so that we can help you make you.'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+    <link rel="stylesheet" type="text/css" href="">
+    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed, iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
