--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <small>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
       <br/><br/>
-      <strong>02.2016</strong> <em>Three Rituals for Removing Creative Blocks</em>, <a href="http://www.theconceptbank.org/PDF/066.pdf" target="_blank">"TheConceptBank Pays Out" (award)</a>, TheConceptBank.org, Unnoticed Art Festival
+      <strong>02.2016</strong> <em>Three Rituals for Removing Creative Blocks</em>, <a href="http://www.theconceptbank.org/PDF/066.pdf" target="_blank">TheConceptBank Pays Out (award)</a>, TheConceptBank.org, Unnoticed Art Festival
       <br/><br/>
       <strong>02.2016</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps</em>, <a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale</a>, Berlin, Germany
       <br/><br/>
