added sweepstakes page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>How to Make Yourself into a Commissioning Body in 5 Easy Steps</title>
+    <title>Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
-    <meta name='description' content='Artists Liat Berdugo and Emily Martinez teach you how to make yourself into a commissioning body in five easy steps. We source from the sharing economy. We turn fully towards the anxieties to make -- not as paralyzingly fears, but as sources for radical generativity and new, collective ways of making in Industry 4.0 and beyond.'>
+    <meta name='description' content='Collaboration by Liat Berdugo and Emily Martinez about the sharing economy.'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script type="text/javascript" src="js/analytics.js"></script>
@@ -72,11 +72,11 @@
     <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
   </div> -->
 
-  <div id="card1" class="card draggable center commissioning-body">
+  <div id="card1" class="card draggable center">
     <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
   </div>
 
-  <div id="card2" class="card draggable center making-you">
+  <div id="card2" class="card draggable center">
     <em>Making You</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.</small>
@@ -102,7 +102,7 @@
     <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
   </div>
 
-  <div id="card6" class="card draggable center making-others">
+  <div id="card6" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     <em>Making Others</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/153431203?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
@@ -111,7 +111,7 @@
 
   <div id="card7" class="card draggable center">
     <img class="new" src="img/new.gif"/>
-    <em>Liat + Emily<br/>as Three Twins</em><br/><br/><br/>
+    <em>Liat + Emily<br/>as Five Twins</em><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
@@ -149,6 +149,8 @@
   <div id="card8" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>03.2016</strong> <em></em>, <a href="" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
+      <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
       <br/><br/>
       <strong>02.2016</strong> <em>Three Rituals for Removing Creative Blocks</em>, <a href="http://www.theconceptbank.org/PDF/066.pdf" target="_blank">TheConceptBank Pays Out (award)</a>, TheConceptBank.org, Unnoticed Art Festival
