--- a/moneyquiz.html
+++ b/moneyquiz.html
@@ -236,7 +236,7 @@
             <div id="slide-24" class="ci-slide">
                 <h2>How suppportive is your partner of your art practice?</h2>
                 <button class="ci-nav" path="slide-25">Very! We make work together, so much so that sometimes I forget who I am.</button>
-                <button class="ci-nav" path="slide-28">Very supportive, but at a distance. We each do our own thing.</button>
+                <button class="ci-nav" path="slide-28">Supportive, but at a distance. We each do our own thing.</button>
                 <button class="ci-nav" path="slide-29">My partner gets super jealous when I pay more attention to my work than to her/him.</button>
                 <button class="ci-nav" path="slide-30">S/he's not very into what I do. I don't think s/he "gets it".</button>
                 <button class="ci-nav prev" path="slide-23"></button>
@@ -309,7 +309,7 @@
             </div>
   
             <div id="slide-32" class="ci-slide">
-                <h2>Sounds like a dream! This must be very comforting.</h2>
+                <h2>This must be very comforting.</h2>
                 <p>Our work here is done. You may close your Internet browser and go home.</p>
                 <button class="ci-nav prev" path="slide-31"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
@@ -317,14 +317,14 @@
 
             <div id="slide-33" class="ci-slide">
                 <h2>Sandwiches?</h2>
-                <p>We're sorry, we know what that means. This ends now. Go to page 92 in the workbook.</p>
+                <p>We're sorry, we know what that means. Go to page 92 in the workbook.</p>
                 <button class="ci-nav prev" path="slide-31"></button>
                 <a href="moneyquiz.html"><button class="ci-nav">Take the Quiz Again</button></a>
             </div>
 
             <div id="slide-34" class="ci-slide">
                 <h2>Oh no, what happened?</h2>
-                <button class="ci-nav" path="slide-35">Too much sex. Like, I'm not supposed to have a body? I didn't ask to be born?!</button>
+                <button class="ci-nav" path="slide-35">Too much sex. Like, I'm not supposed to have a body, with urges? I didn't ask to be born?!</button>
                 <button class="ci-nav" path="slide-35">They think I'm going to end up in prison. It's not easy trying to bring down governments with internet memes and elaborate art interventions.</button>
                 <button class="ci-nav" path="slide-35">Art is life. i.e. I share way too much personal information. They think it reflects poorly on them. Holiday gatherings are the worst.</button>
                 <button class="ci-nav prev" path="slide-31"></button>
