--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div id="card8" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>03.2016</strong> <em></em>, <a href="" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
+      <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://temporaryartreview.com/document-v/" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
       <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
       <br/><br/>
@@ -157,7 +157,7 @@
       <br/><br/>
       <strong>02.2016</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps</em>, <a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale</a>, Berlin, Germany
       <br/><br/>
-      <strong>02.2016</strong> <em>Making You</em>, "Past and Future Conditions", A1 Lab Arts, Knoxville, TN
+      <strong>02.2016</strong> <em>Making You</em>, <a href="http://www.a1labarts.org/past-exhibitions--events.html" target="_blank">Past and Future Conditions"</a>, A1 Lab Arts, Knoxville, TN
       <br/><br/>
       <strong>12.2015</strong> <em>Making You</em> was shortlisted for the <a href="https://www.jcu.edu.au/college-of-arts-society-and-education/arts-and-creative-media/artist-call" target="_blank">“ScreenGrab7 International Media Arts Award”</a>, Townsville, Australia
       <br/><br/>
