--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -56,7 +56,7 @@
        <a href="#!" class="closePopUpOutSide"></a>    
     </aside>
 
-    <marquee direction="right" width="100%" height="100%" behavior="alternate">
+    <marquee direction="right" width="100%" height="100%" behavior="alternate"><img class="clickhere" src="img/clickhere2.gif">
       <a href="#you" id="openpopup"><div id="makingyou"><img src="img/sweepstakes-trophy.gif"></div></a>
     </marquee>
 
@@ -120,7 +120,7 @@
 
     <!-- FORM ENTER SWEEPSTAKES -->
  
-    <form id ="gform" onsubmit="return checkForm(this);" method="POST" action="https://script.google.com/macros/s/AKfycbw4Z_E4l_0sxgG6n5FDDQ-R7dGOWX8nHlDlSHxwpjovtRLSRqnT/exec">      
+    <form id ="gform" onsubmit="return checkForm(this);" method="POST" action="https://script.google.com/macros/s/AKfycbw4Z_E4l_0sxgG6n5FDDQ-R7dGOWX8nHlDlSHxwpjovtRLSRqnT/exec">    
       <input name="name" type="text" class="feedback-input" placeholder="Name" required/>   
       <input name="email" type="email" class="feedback-input" placeholder="Email" required/>
       <input type="checkbox" id="terms" name="terms" />
@@ -129,7 +129,11 @@
     </form>
 
     <div style="display:none;" id="thankyou_message">
-      <h2>Thanks for entering! <span class="never-enough">Click here to keep winning!</span></h2>
+      <div class="thanks">
+        <img class="skull line-up" src="img/sweepstakes-goldskull.gif">
+        <h3 class="line-up">Thanks for entering! Click <span class="clickme">here</span> to keep winning!</h3>
+        <img class="skull line-up" src="img/sweepstakes-goldskull.gif">
+      </div>
     </div>
 
     <!--WALK-ON VIDEO -->
@@ -149,7 +153,7 @@
       <div id="anxious-info"><span id="anxious-resume" class="fa fa-bullhorn fa-lg"></span></div>
       <div id="anxious-next">
         <a href="#others" id="openpopup">
-          <div id="makingothers"><img src="img/sweepstakes-trophy2.gif"></div>
+          <div id="makingothers"><img class="clickhere" src="img/clickhere2.gif"><img src="img/sweepstakes-trophy2.gif"></div>
         </a>
       </div>
     </div>
