fixed clickhere behavior

--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -56,8 +56,8 @@
        <a href="#!" class="closePopUpOutSide"></a>    
     </aside>
 
-    <marquee direction="right" width="100%" height="100%" behavior="alternate"><img class="clickhere" src="img/clickhere2.gif">
-      <a href="#you" id="openpopup"><div id="makingyou"><img src="img/sweepstakes-trophy.gif"></div></a>
+    <marquee direction="right" width="100%" height="100%" behavior="alternate">
+      <a href="#you" id="openpopup"><img class="clickhere" src="img/clickhere2.gif"><div id="makingyou"><img src="img/sweepstakes-trophy.gif"></div></a>
     </marquee>
 
     <!-- POP UP MAKING OTHERS -->
